Generating JWT Tokens

--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 MONGO_URI = mongodb+srv://EduBondhu:EduBondhu1234@cluster0.sp2aydy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
+JWT_SECRET=aftabsaimanrabeebedubondhu
+JWT-EXPIERS = 1d
