--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,7 @@
 MONGO_URI = mongodb+srv://EduBondhu:EduBondhu1234@cluster0.sp2aydy.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 PORT = 5000
 JWT_SECRET=aftabsaimanrabeebedubondhu
-JWT-EXPIERS = 1d
+JWT-EXPIRES = 1d
+
+EMAIL_USER = aftabahmedfahim.04@gmail.com
+EMAIL_PASS = bujv drqo mhlj pbjd
